# As-Rigid-As-Possible

./: CMakeLists.txt  README.md  animation.cpp  config.h.in  main.cpp  mesh.cpp  plane_animation.cpp  sphere_animation.cpp  test_plane.cpp  test_sphere.cpp
data/: anchors.txt  plane_anchors.txt  sphere_anchors.txt
include/: OpenGLProjector.hpp  matrix.hpp  mesh.hpp  vector3.hpp  visualizer.hpp
